# Speculative-Decoding

./: .gitignore  README.md  README_PARD.md  pyproject.toml
common/: __init__.py  metrics.py  qwen3.py  sampling.py  tokenizer.py  toy_models.py  verification.py
data/: modelopt_ultrachat_eval100_qwen25_7b_greedy128.jsonl  prepare_ngram_wiki.py  smoke_prompt_train.jsonl  ultrachat_300.jsonl  ultrachat_3000_train_eval100_qwen25_7b_greedy128_ids.jsonl  ultrachat_300_qwen7b_greedy16.jsonl  ultrachat_300_trunc512.jsonl  ultrachat_300_trunc512_qwen7b_greedy16.jsonl  ultrachat_300_trunc512_qwen7b_greedy16_ids.jsonl  ultrachat_eval_10.jsonl  ultrachat_eval_10_short.jsonl  ultrachat_eval_10_short_trunc128.jsonl  ultrachat_eval_50_short.jsonl  ultrachat_eval_50_short_trunc512.jsonl  wiki_extract_ngram_eval100_qwen25_7b.metadata.json
plans/: progress.md
runs/: draft_model_qwen25_05b_2ep_len2.summary.json  draft_model_qwen25_05b_2ep_len4.summary.json  draft_model_qwen25_05b_2ep_len6.summary.json  draft_model_ultrachat3000_len2_nonvllm.jsonl  draft_model_ultrachat3000_len2_nonvllm.summary.json  draft_model_ultrachat3000_len2_vllm_batched.baseline.json  draft_model_ultrachat3000_len2_vllm_batched.summary.json  draft_model_ultrachat3000_len2_vllm_serial.baseline.json  draft_model_ultrachat3000_len2_vllm_serial.summary.json  draft_model_ultrachat3000_len3_vllm_batched.summary.json  eagle3_eval100_ce_len2_nonvllm.jsonl  eagle3_eval100_ce_len2_nonvllm.summary.json  eagle3_eval100_ce_len2_vllm_batched.baseline.json  eagle3_eval100_ce_len2_vllm_batched.summary.json  (+52 more)
tests/: test_mtp.py  (+8 more)
(+20 files in other folders)
