[project]
name = "speculative-decoding"
version = "0.1.0"
description = "Speculative decoding implementations from scratch."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "arctic-inference==0.1.1",
  "datasets>=4.0.0,<=4.6.0",
  "huggingface-hub>=0.35.3,<0.36",
  "pytest>=8.4.2,<9",
  "safetensors>=0.6.2,<0.7",
  "speculators==0.4.0.1",
  "torch==2.10.0",
  "transformers>=4.57.1,<=4.57.6",
  "vllm==0.19.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
packages = ["common"]

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"
